
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hda_codec {int vendor_id; } ;


 int alc_write_coef_idx (struct hda_codec*,int,int) ;
 int snd_printdd (char*) ;

__attribute__((used)) static void alc_headset_mode_default(struct hda_codec *codec)
{
 switch (codec->vendor_id) {
 case 0x10ec0283:
  alc_write_coef_idx(codec, 0x06, 0x2100);
  alc_write_coef_idx(codec, 0x32, 0x4ea3);
  break;
 case 0x10ec0292:
  alc_write_coef_idx(codec, 0x76, 0x000e);
  alc_write_coef_idx(codec, 0x6c, 0x2400);
  alc_write_coef_idx(codec, 0x6b, 0xc429);
  alc_write_coef_idx(codec, 0x18, 0x7308);
  break;
 case 0x10ec0668:
  alc_write_coef_idx(codec, 0x11, 0x0041);
  alc_write_coef_idx(codec, 0x15, 0x0d40);
  alc_write_coef_idx(codec, 0xb7, 0x802b);
  break;
 }
 snd_printdd("Headset jack set to headphone (default) mode.\n");
}
