; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_realtek.c_alc_headset_mode_default.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_realtek.c_alc_headset_mode_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_codec = type { i32 }

@.str = private unnamed_addr constant [47 x i8] c"Headset jack set to headphone (default) mode.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hda_codec*)* @alc_headset_mode_default to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alc_headset_mode_default(%struct.hda_codec* %0) #0 {
  %2 = alloca %struct.hda_codec*, align 8
  store %struct.hda_codec* %0, %struct.hda_codec** %2, align 8
  %3 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %4 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %27 [
    i32 283902595, label %6
    i32 283902610, label %11
    i32 283903592, label %20
  ]

6:                                                ; preds = %1
  %7 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %8 = call i32 @alc_write_coef_idx(%struct.hda_codec* %7, i32 6, i32 8448)
  %9 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %10 = call i32 @alc_write_coef_idx(%struct.hda_codec* %9, i32 50, i32 20131)
  br label %27

11:                                               ; preds = %1
  %12 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %13 = call i32 @alc_write_coef_idx(%struct.hda_codec* %12, i32 118, i32 14)
  %14 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %15 = call i32 @alc_write_coef_idx(%struct.hda_codec* %14, i32 108, i32 9216)
  %16 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %17 = call i32 @alc_write_coef_idx(%struct.hda_codec* %16, i32 107, i32 50217)
  %18 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %19 = call i32 @alc_write_coef_idx(%struct.hda_codec* %18, i32 24, i32 29448)
  br label %27

20:                                               ; preds = %1
  %21 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %22 = call i32 @alc_write_coef_idx(%struct.hda_codec* %21, i32 17, i32 65)
  %23 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %24 = call i32 @alc_write_coef_idx(%struct.hda_codec* %23, i32 21, i32 3392)
  %25 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %26 = call i32 @alc_write_coef_idx(%struct.hda_codec* %25, i32 183, i32 32811)
  br label %27

27:                                               ; preds = %1, %20, %11, %6
  %28 = call i32 @snd_printdd(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @alc_write_coef_idx(%struct.hda_codec*, i32, i32) #1

declare dso_local i32 @snd_printdd(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
